OO-4219: more escaping in check list