@@ -151,7 +151,7 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 		MultipleSelectionElement boxEl = uifactory
 				.addCheckboxesHorizontal(boxId, null, formLayout, onKeys, values);
 		boxEl.setEnabled(!readOnly && !coachCourseEnv.isCourseReadOnly());
-		boxEl.setLabel(checkbox.getTitle(), null, false);
+		boxEl.setLabel(StringHelper.escapeHtml(checkbox.getTitle()), null, false);
 		boxEl.showLabel(true);
 		boxEl.addActionListener(FormEvent.ONCHANGE);
 		
@@ -219,10 +219,9 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 
 	@Override
 	protected boolean validateFormLogic(UserRequest ureq) {
+		boolean allOk = super.validateFormLogic(ureq);
 		
-		boolean allOk = true;
 		for(CheckboxWrapper wrapper:wrappers) {
-		
 			TextElement pointEl = wrapper.getPointEl();
 			if(pointEl != null) {
 				pointEl.clearError();
@@ -244,7 +243,7 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 				}
 			}
 		}
-		return allOk & super.validateFormLogic(ureq);
+		return allOk;
 	}
 
 	private void doSave() {
@@ -255,7 +254,7 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 				String val = wrapper.getPointEl().getValue();
 				if(StringHelper.containsNonWhitespace(val)) {
 					try {
-						editedPoint = new Float(val);
+						editedPoint = Float.valueOf(val);
 					} catch (NumberFormatException e) {
 						editedPoint = null;
 					}	
@@ -351,7 +350,7 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 			this.dbCheckbox = dbCheckbox;
 		}
 
-		public String getTitle() {
+		public String getTitle2() {
 			return checkbox.getTitle();
 		}
 		
@@ -368,7 +367,7 @@ public class AssessedIdentityCheckListController extends FormBasicController {
 		}
 		
 		public String getCheckboxElName() {
-			return checkboxEl.getName();//getComponent().getComponentName();
+			return checkboxEl.getName();
 		}
 	}
 }
